[gd_scene load_steps=5 format=3 uid="uid://l6ctn3twyh6a"]

[ext_resource type="Script" path="res://Scripts/UI/InventoryUI.gd" id="1_vjse1"]
[ext_resource type="Texture2D" uid="uid://bakfd23onwq1n" path="res://assets/prototype/UIDifferentFree03Wenrexa/JPG/MiniPanel04.jpg" id="2_ol81b"]
[ext_resource type="FontFile" uid="uid://bjgg0m2tic0po" path="res://assets/prototype/lucana-font/LucanaRegular-DYEB3.ttf" id="3_f4nkw"]
[ext_resource type="FontFile" uid="uid://cdur1q2vt6uhu" path="res://assets/prototype/FiraCode-Regular.ttf" id="4_f18rm"]

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_vjse1")

[node name="StatusAnchor" type="Control" parent="."]
anchors_preset = 0
offset_left = 800.0
offset_right = 840.0
offset_bottom = 40.0

[node name="StatusPanel" type="Panel" parent="StatusAnchor"]
clip_contents = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -190.0
offset_right = -40.0
offset_bottom = 350.0
grow_horizontal = 0

[node name="PanelBackground" type="Sprite2D" parent="StatusAnchor/StatusPanel"]
position = Vector2(0, -51.215)
scale = Vector2(1.135, 1.135)
texture = ExtResource("2_ol81b")
centered = false

[node name="Status" type="RichTextLabel" parent="StatusAnchor/StatusPanel"]
layout_mode = 0
offset_left = 41.0
offset_top = 4.0
offset_right = 111.89
offset_bottom = 27.0
theme_override_fonts/normal_font = ExtResource("3_f4nkw")
text = "STATUS"

[node name="Hatred" type="Label" parent="StatusAnchor/StatusPanel"]
layout_mode = 0
offset_left = 5.0
offset_top = 35.0
offset_right = 63.0
offset_bottom = 58.0
theme_override_fonts/font = ExtResource("3_f4nkw")
text = "Hatred"

[node name="HatredValue" type="Label" parent="StatusAnchor/StatusPanel/Hatred"]
layout_mode = 0
offset_left = 80.0
offset_right = 138.0
offset_bottom = 16.0
theme_override_fonts/font = ExtResource("3_f4nkw")
text = "10"
horizontal_alignment = 2

[node name="Avarice" type="Label" parent="StatusAnchor/StatusPanel"]
layout_mode = 0
offset_left = 5.0
offset_top = 60.0
offset_right = 67.0
offset_bottom = 83.0
theme_override_fonts/font = ExtResource("3_f4nkw")
text = "Avarice"

[node name="AvariceValue" type="Label" parent="StatusAnchor/StatusPanel/Avarice"]
layout_mode = 0
offset_left = 80.0
offset_right = 138.0
offset_bottom = 16.0
theme_override_fonts/font = ExtResource("3_f4nkw")
text = "10"
horizontal_alignment = 2

[node name="Lechery" type="Label" parent="StatusAnchor/StatusPanel"]
layout_mode = 0
offset_left = 5.0
offset_top = 85.0
offset_right = 73.0
offset_bottom = 108.0
theme_override_fonts/font = ExtResource("3_f4nkw")
text = "Lechery
"

[node name="LecheryValue" type="Label" parent="StatusAnchor/StatusPanel/Lechery"]
layout_mode = 0
offset_left = 80.0
offset_right = 138.0
offset_bottom = 16.0
theme_override_fonts/font = ExtResource("3_f4nkw")
text = "10"
horizontal_alignment = 2

[node name="Dexterity" type="Label" parent="StatusAnchor/StatusPanel"]
layout_mode = 0
offset_left = 5.0
offset_top = 110.0
offset_right = 83.0
offset_bottom = 133.0
theme_override_fonts/font = ExtResource("3_f4nkw")
text = "Dexterity"

[node name="DexterityValue" type="Label" parent="StatusAnchor/StatusPanel/Dexterity"]
layout_mode = 0
offset_left = 80.0
offset_right = 138.0
offset_bottom = 16.0
theme_override_fonts/font = ExtResource("3_f4nkw")
text = "10"
horizontal_alignment = 2

[node name="Endurance" type="Label" parent="StatusAnchor/StatusPanel"]
layout_mode = 0
offset_left = 5.0
offset_top = 135.0
offset_right = 93.0
offset_bottom = 158.0
theme_override_fonts/font = ExtResource("3_f4nkw")
text = "Endurance"

[node name="EnduranceValue" type="Label" parent="StatusAnchor/StatusPanel/Endurance"]
layout_mode = 0
offset_left = 80.0
offset_right = 138.0
offset_bottom = 16.0
theme_override_fonts/font = ExtResource("3_f4nkw")
text = "10"
horizontal_alignment = 2

[node name="Strength" type="Label" parent="StatusAnchor/StatusPanel"]
layout_mode = 0
offset_left = 5.0
offset_top = 160.0
offset_right = 79.0
offset_bottom = 183.0
theme_override_fonts/font = ExtResource("3_f4nkw")
text = "Strength"

[node name="StrengthValue" type="Label" parent="StatusAnchor/StatusPanel/Strength"]
layout_mode = 0
offset_left = 80.0
offset_right = 138.0
offset_bottom = 16.0
theme_override_fonts/font = ExtResource("3_f4nkw")
text = "10"
horizontal_alignment = 2

[node name="Knowledge" type="Label" parent="StatusAnchor/StatusPanel"]
layout_mode = 0
offset_left = 5.0
offset_top = 185.0
offset_right = 91.0
offset_bottom = 208.0
theme_override_fonts/font = ExtResource("3_f4nkw")
text = "Knowledge"

[node name="KnowledgeValue" type="Label" parent="StatusAnchor/StatusPanel/Knowledge"]
layout_mode = 0
offset_left = 80.0
offset_right = 138.0
offset_bottom = 16.0
theme_override_fonts/font = ExtResource("3_f4nkw")
text = "10"
horizontal_alignment = 2

[node name="Insight" type="Label" parent="StatusAnchor/StatusPanel"]
layout_mode = 0
offset_left = 5.0
offset_top = 210.0
offset_right = 73.0
offset_bottom = 233.0
theme_override_fonts/font = ExtResource("3_f4nkw")
text = "Insight"

[node name="InsightValue" type="Label" parent="StatusAnchor/StatusPanel/Insight"]
layout_mode = 0
offset_left = 80.0
offset_right = 138.0
offset_bottom = 16.0
theme_override_fonts/font = ExtResource("3_f4nkw")
text = "10"
horizontal_alignment = 2

[node name="Defense Status" type="RichTextLabel" parent="StatusAnchor/StatusPanel"]
layout_mode = 0
offset_left = 6.00001
offset_top = 234.0
offset_right = 145.375
offset_bottom = 348.715
theme_override_fonts/normal_font = ExtResource("4_f18rm")
theme_override_font_sizes/normal_font_size = 10
text = "Defense against:
Slash 0
Blunt 0
Pierce 0
Fire 0
Frost 0
Lightning 0
Mental 0"

[node name="ActionAnchor" type="Control" parent="."]
anchors_preset = 0
offset_top = 275.0
offset_right = 40.0
offset_bottom = 315.0

[node name="ActionGrid" type="GridContainer" parent="ActionAnchor"]
layout_mode = 1
offset_right = 40.0
offset_bottom = 40.0
columns = 10

[node name="ActionPanel" type="Panel" parent="ActionAnchor"]
clip_contents = true
layout_mode = 1
offset_top = -40.0
offset_right = 100.0
offset_bottom = 110.0
scale = Vector2(0.899113, 0.28543)

[node name="ActionLabel" type="Label" parent="ActionAnchor"]
layout_mode = 0
offset_left = 13.0
offset_top = -28.0
offset_right = 75.0
offset_bottom = -5.0
theme_override_fonts/font = ExtResource("3_f4nkw")
text = "Actions"

[node name="InventoryAnchor" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="InventoryGrid" type="GridContainer" parent="InventoryAnchor"]
layout_mode = 1
offset_top = 42.0
offset_right = 40.0
offset_bottom = 82.0
columns = 5

[node name="InventoryPanel" type="Panel" parent="InventoryAnchor"]
clip_contents = true
layout_mode = 0
offset_right = 100.0
offset_bottom = 150.0
scale = Vector2(0.899113, 0.28543)

[node name="InventoryLabel" type="Label" parent="InventoryAnchor"]
layout_mode = 0
offset_left = 6.0
offset_top = 10.0
offset_right = 86.0
offset_bottom = 33.0
theme_override_fonts/font = ExtResource("3_f4nkw")
text = "Inventory"

[node name="TextboxAnchor" type="Control" parent="."]
anchors_preset = 0
offset_top = 400.0
offset_right = 40.0
offset_bottom = 440.0

[node name="TextboxPanel" type="Panel" parent="TextboxAnchor"]
clip_contents = true
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = -2.0
offset_top = -40.0
offset_right = 798.0
offset_bottom = 160.0
grow_vertical = 0

[node name="ItemStats" type="RichTextLabel" parent="TextboxAnchor"]
layout_mode = 1
offset_right = 400.0
offset_bottom = 160.0
theme_override_fonts/normal_font = ExtResource("4_f18rm")
theme_override_font_sizes/normal_font_size = 15
text = "Name: Long Sword
Slash Damage:     10
Blunt Damage:     0
Pierce Damage:    0
Fire Damage:      0
Frost Damage:     0
Lightning Damage: 0
Weapon Action: Slash, Cleave"

[node name="Description" type="RichTextLabel" parent="TextboxAnchor"]
layout_mode = 1
offset_left = 420.0
offset_right = 801.315
offset_bottom = 160.0
theme_override_fonts/normal_font = ExtResource("4_f18rm")
theme_override_font_sizes/normal_font_size = 15
text = "Description:
an average-sized double-bladed sword. Simplicity in itself."

[node name="InputPrompt" type="RichTextLabel" parent="TextboxAnchor"]
layout_mode = 1
offset_left = 20.0
offset_top = 175.0
offset_right = 770.0
offset_bottom = 195.0
theme_override_fonts/normal_font = ExtResource("4_f18rm")
theme_override_font_sizes/normal_font_size = 15
text = "z: equip/unequip(right) x:equip/unequip(left) c: drop item "

[node name="TextboxAnchor2" type="Control" parent="."]
anchors_preset = 0
offset_top = 400.0
offset_right = 40.0
offset_bottom = 440.0

[node name="TextboxPanel" type="Panel" parent="TextboxAnchor2"]
clip_contents = true
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = -2.0
offset_top = 60.0
offset_right = 798.0
offset_bottom = 160.0
grow_vertical = 0

[node name="Message" type="RichTextLabel" parent="TextboxAnchor2"]
layout_mode = 1
offset_left = 20.0
offset_top = 100.0
offset_right = 770.0
offset_bottom = 181.0
theme_override_fonts/normal_font = ExtResource("4_f18rm")
theme_override_font_sizes/normal_font_size = 15
text = "Player Direction Unlocked"

[node name="GameOver" type="Label" parent="."]
layout_mode = 0
offset_left = 118.0
offset_top = 179.0
offset_right = 753.0
offset_bottom = 301.0
scale = Vector2(0.938583, 1.09614)
theme_override_fonts/font = ExtResource("3_f4nkw")
theme_override_font_sizes/font_size = 121
text = "Game Over"
